--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "p-proxies",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "Proxies.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
