--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "p-proxies",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -17,8 +17,8 @@
     "jquery": "^3.2.1",
     "jsdom": "^11.3.0",
     "random-ua": "0.0.6",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "socks5-https-client": "^1.2.1"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
